--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^26.0.10",
+    "@types/lodash": "^4.14.159",
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
+    "lodash": "^4.17.20",
     "mxgraph": "^4.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
